--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 
 .mainBlockAbout {
   margin-top: 3vmin;
-  border-bottom: 1.5vh solid #a8e063;
+  border-bottom: 1vh solid #a8e063;
   margin-bottom: 7vh;
 }
 .jumbotron.aboutUs {
@@ -132,12 +132,13 @@
 }
 .iconСhooseUs {
   width : 11vh;
+  margin-top: 3vmin;
 }
 .titleChooseUs {
   font-weight: bold;
   font-size : 3vh;
   color : #202020;
-  margin-top: 7vmin;
+  margin-top: 8vmin;
 }
 
 .titleInfoChooseUs {
@@ -161,31 +162,48 @@
 /*-----------END chooseUs styles----------- */
 
 
-/*-----------partners styles----------- */
-
-.partners {
-  margin-top: 15vmin;
-}
-.logosPartners {
-  width: 11.5vmin;
-  height: 11.5vmin;
-  margin: 1vmin;
-  transform: scale(0.7);
-}
-.titlePartners {
-  margin-bottom: 15vmin;
-  font-weight: bold;
-}
-
-/*-----------END partners styles----------- */
-
-
 /*-----------DeliveryGeography style----------- */
+
 .map {
   width: inherit;
 }
 .titleDeliveryGeography {
   margin-top: 15vmin;
-  margin-bottom: 15vmin;
+  margin-bottom: 10vmin;
   color : #202020;
 }
+
+/*-----------END DeliveryGeography style----------- */
+
+
+/*-----------blockNews style----------- */
+
+.titleNews {
+  margin-bottom: 15vmin;
+  margin-top: 15vmin;
+}
+.btnNews {
+  width: 12vh;
+  margin-bottom: 5vmin;
+}
+
+/*-----------END blockNews style----------- */
+
+
+/*-----------partners styles----------- */
+.partners {
+  margin-top: 15vmin;
+}
+.titlePartners {
+  margin-bottom: 10vmin;
+  font-weight: bold;
+}
+.logosPartners {
+  width: 10vmin;
+  height: 10vmin;
+  margin: 0.4vmin;
+  padding: 1.5vmin;
+}
+
+
+/*-----------END partners styles----------- */
