--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,7 @@
 
 .map {
   width: inherit;
+  transform: scale(0.85);
 }
 .titleDeliveryGeography {
   margin-top: 15vmin;
@@ -177,33 +178,48 @@
 
 
 /*-----------blockNews style----------- */
-
+.mainBlockNews {
+  height: 60vh;
+}
 .titleNews {
-  margin-bottom: 15vmin;
+  margin-bottom: 5vmin;
   margin-top: 15vmin;
 }
 .btnNews {
   width: 12vh;
-  margin-bottom: 5vmin;
+  margin-bottom: 4vmin;
 }
 
 /*-----------END blockNews style----------- */
 
 
 /*-----------partners styles----------- */
+
 .partners {
-  margin-top: 15vmin;
+  margin-top: 20vmin;
+  margin-bottom: 20vmin;
 }
 .titlePartners {
   margin-bottom: 10vmin;
   font-weight: bold;
 }
 .logosPartners {
-  width: 10vmin;
-  height: 10vmin;
-  margin: 0.4vmin;
-  padding: 1.5vmin;
+  width: 11vmin;
+  height: 11vmin;
+  margin: 1.2vmin;
+  padding: 0.8vmin;
 }
 
 
 /*-----------END partners styles----------- */
+
+
+/*-----------footer styles----------- */
+
+.footer {
+  margin-top: 2vmin;
+  padding-top: 5vmin;
+  height: 23vh;
+  background: #ffbb33;
+  border-bottom: 3vh solid #dba029;
+}
